force-app/main/default/objects/Opty_Sd__c/Opty_Sd__c.object-meta.xml
<CustomObject>
    <label>Opty Sd</label>
    <pluralLabel>Opty Sds</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Opty Sd Number</label>
        <displayFormat>A-{0000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>