force-app/main/default/objects/Opty_Sd__c/fields/Amount0__c.field-meta.xml
<CustomField>
    <fullName>Amount0__c</fullName>
    <label>Amount Current</label>
    <type>Currency</type>
    <scale>2</scale>
    <precision>16</precision>
</CustomField>