force-app/main/default/objects/Opty_Sd__c/fields/Amount1__c.field-meta.xml
<CustomField>
    <fullName>Amount1__c</fullName>
    <label>Amount1</label>
    <type>Currency</type>
    <scale>2</scale>
    <precision>16</precision>
</CustomField>