force-app/main/default/objects/Opty_Sd__c/fields/Amount2__c.field-meta.xml
<CustomField>
    <fullName>Amount2__c</fullName>
    <label>Amount2</label>
    <type>Currency</type>
    <scale>2</scale>
    <precision>16</precision>
</CustomField>