force-app/main/default/objects/Opty_Sd__c/fields/CloseDate0__c.field-meta.xml
<CustomField>
    <fullName>CloseDate0__c</fullName>
    <label>CloseDate Current</label>
    <type>Date</type>
</CustomField>