force-app/main/default/objects/Opty_Sd__c/fields/CloseDate1__c.field-meta.xml
<CustomField>
    <fullName>CloseDate1__c</fullName>
    <label>CloseDate Month-1</label>
    <type>Date</type>
</CustomField>