force-app/main/default/objects/Opty_Sd__c/fields/CloseDate2__c.field-meta.xml
<CustomField>
    <fullName>CloseDate2__c</fullName>
    <label>CloseDate Month-2</label>
    <type>Date</type>
</CustomField>