force-app/main/default/objects/Opty_Sd__c/fields/Month0__c.field-meta.xml
<CustomField>
    <fullName>Month0__c</fullName>
    <label>Month Current</label>
    <type>Text</type>
    <length>50</length>
</CustomField>