force-app/main/default/objects/Opty_Sd__c/fields/Month1__c.field-meta.xml
<CustomField>
    <fullName>Month1__c</fullName>
    <label>Month 1 Ago</label>
    <type>Text</type>
    <length>50</length>
</CustomField>