force-app/main/default/objects/Opty_Sd__c/fields/Month2__c.field-meta.xml
<CustomField>
    <fullName>Month2__c</fullName>
    <label>Month 2 Ago</label>
    <type>Text</type>
    <length>50</length>
</CustomField>