force-app/main/default/objects/Opty_Sd__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>MasterDetail</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>OptySda_Opportunity</relationshipName>
</CustomField>