force-app/main/default/objects/Opty_Sd__c/fields/Period_of_Performance2__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Performance2__c</fullName>
    <label>Period of Performance2</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>