force-app/main/default/objects/Opty_Sd__c/fields/Reason0__c.field-meta.xml
<CustomField>
    <fullName>Reason0__c</fullName>
    <label>Reason Current</label>
    <type>Text</type>
    <length>255</length>
</CustomField>