force-app/main/default/objects/Opty_Sd__c/fields/Reason1__c.field-meta.xml
<CustomField>
    <fullName>Reason1__c</fullName>
    <label>Reason1</label>
    <type>Text</type>
    <length>255</length>
</CustomField>