force-app/main/default/objects/Opty_Sd__c/fields/Reason2__c.field-meta.xml
<CustomField>
    <fullName>Reason2__c</fullName>
    <label>Reason2</label>
    <type>Text</type>
    <length>255</length>
</CustomField>